--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
 <!-- Hero Section -->
 <section id="home" class="hero">
     <div class="hero-content">
-        <img src="images/profile.jpeg" class="profile-pic">
+        <img src="profile.jpeg" class="profile-pic">
 
         <h1>Hello, I'm <span>Anamul Haque</span></h1>
         <h2><span id="typing"></span></h2>
 
         <div class="buttons">
             <a href="#contact" class="btn">Hire Me</a>
-            <a href="images/cv.pdf" download class="btn secondary">Download CV</a>
+            <a href="cv.pdf" download class="btn secondary">Download CV</a>
         </div>
 
         <div class="socials">
@@ -196,3 +196,4 @@ document.querySelector(".menu-toggle").onclick = function() {
 
 </body>
 </html>
+
