--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ I am actively seeking internship opportunities where I can apply my technical kn
 
         <div class="card project">
             <h3>Academic Engineering Project</h3>
-            <p>Worked on engineering-based problem solving and analysis as part of EEE coursework.</p>
+            <p>Worked on engineering-based problem solving and analysis as part of CSE coursework.</p>
         </div>
     </div>
 </section>
@@ -127,9 +127,9 @@ I am actively seeking internship opportunities where I can apply my technical kn
     <h2>Education</h2>
     <div class="card-container">
         <div class="card">
-            <h3>BSc in Electrical & Electronic Engineering</h3>
-            <p>Your University Name</p>
-            <p>Expected Graduation: 2026</p>
+            <h3>BSc in Computer Science and Engineering</h3>
+            <p>Varendra University</p>
+            <p>Expected Graduation: 2027</p>
         </div>
     </div>
 </section>
@@ -148,7 +148,7 @@ I am actively seeking internship opportunities where I can apply my technical kn
 <!-- Contact Section -->
 <section id="contact" class="section">
     <h2>Contact Me</h2>
-    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+    <form action="https://formspree.io/f/xdaljveo" method="POST">
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
         <textarea name="message" placeholder="Your Message" required></textarea>
@@ -196,4 +196,5 @@ document.querySelector(".menu-toggle").onclick = function() {
 
 </body>
 </html>
+
 
